--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing Books</h1>
+<h1>Listing Books1</h1>
 <%= form_tag books_path, :method => 'get' do%>
 <%= text_field_tag :search, params[:search]%>
 <%= submit_tag "Search"%>
